# merovingian_legacy

./: .gitignore  Cargo.toml  generate.py  patterns.md
matching/: Cargo.toml  README.md
matching/src/: lib.rs  main.rs  movie.rs  nfa.rs  tokens.rs  tv.rs  util.rs
parsing2/: Cargo.toml
parsing2/src/: lib.rs  metadata.rs  movie.rs  regex_set.rs  tokens.rs  tv.rs
src/: config.rs  database.rs  error.rs  fingerprint.rs  fs.rs  input.rs  main.rs  scan.rs  tasks.rs  tree.rs
src/parse/: episode.rs  metadata.rs  mod.rs  movie.rs  patterns.rs
src/tasks/: import.rs  mod.rs  sync.rs
src/tmdb/: search.rs
testdata/: American Psycho 2000.mkv  Groundhog.Day.1080p.m4v  american psycho 720p.m4v  american psycho 720p.srt
testdata/The.Matrix.1999/: subtitles.srt
testdata/subs/: ignored.sub
