[package]
name = "merovingian"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]

[dependencies]
lazy_static = "1.0"
maplit = "1.0"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
slab = "0.4"
structopt = { version = "0.2", default-features = false }
