[package]
name = "matching"
version = "0.1.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]

[dependencies]
lazy_static = "1.0"
maplit = "1.0"
petgraph = { version = "0.4", default_features = false }
regex = "0.2"
rpds = "0.5"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "dot"
path = "src/bin/dot.rs"

[profile.dev]
debug = false
